--- a/html/1.2 nagrade.html
+++ b/html/1.2 nagrade.html
@@ -96,10 +96,10 @@
 							<div class="row">
 							  <div class="col-4">
 							    <div class="list-group" id="list-tab" role="tablist">
-							      <a class="list-group-item list-group-item-action active" id="list-1-list" data-toggle="list" href="#list-1" role="tab" aria-controls="1">Međunarodni takmičarski program</a>
-							      <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2">Nacionalni takmičarski program</a>
-							      <a class="list-group-item list-group-item-action" id="list-3-list" data-toggle="list" href="#list-3" role="tab" aria-controls="3">Subverzivni, kontroverzni i umetnički filmovi</a>
-							      <a class="list-group-item list-group-item-action" id="list-4-list" data-toggle="list" href="#list-4" role="tab" aria-controls="4">Politikina nagrada</a>
+							      <a class="list-group-item list-group-item-action active" id="list-1-list" data-toggle="list" href="#list-1" role="tab" aria-controls="1" style="font-size:calc(9px + 0.4vw);">Međunarodni takmičarski program</a>
+							      <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2" style="font-size:calc(9px + 0.4vw);">Nacionalni takmičarski program</a>
+							      <a class="list-group-item list-group-item-action" id="list-3-list" data-toggle="list" href="#list-3" role="tab" aria-controls="3" style="font-size:calc(9px + 0.4vw);">Subverzivni, kontroverzni i umetnički filmovi</a>
+							      <a class="list-group-item list-group-item-action" id="list-4-list" data-toggle="list" href="#list-4" role="tab" aria-controls="4" style="font-size:calc(9px + 0.4vw);">Politikina nagrada</a>
 							    </div>
 							  </div>
 							  <div class="col-8">
@@ -107,41 +107,41 @@
 							    <div class="tab-content" id="nav-tabContent">
 							      <div class="tab-pane fade show active" id="list-1" role="tabpanel" aria-labelledby="list-1-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">Nagrada „Beogradski pobednik“ za najbolji film - dodeljuje se producentu </li>
-									  <li class="list-group-item">Specijalna Nagrada žirija </li>
-									  <li class="list-group-item">Nagrada za najbolju režiju</li>
-									  <li class="list-group-item">Nagrada za najbolju žensku ulogu</li>
-									  <li class="list-group-item">Nagrada za najbolju mušku ulogu</li>
-									  <li class="list-group-item">Nagrada za najbolji scenario</li>
-									  <li class="list-group-item">Nagrada za najbolji debi </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada „Beogradski pobednik“ za najbolji film - dodeljuje se producentu </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Specijalna Nagrada žirija </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolju režiju</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolju žensku ulogu</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolju mušku ulogu</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolji scenario</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolji debi </li>
 									</ul>
 							      </div>
 
 							      <div class="tab-pane fade" id="list-2" role="tabpanel" aria-labelledby="list-2-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">Nagrada „Beogradski pobednik“ za najbolji film - dodeljuje se producentu </li>
-									  <li class="list-group-item">Nagrada žirija </li>
-									  <li class="list-group-item">Nagrada za najbolju režiju</li>
-									  <li class="list-group-item">Nagrada za najbolju žensku ulogu</li>
-									  <li class="list-group-item">Nagrada za najbolju mušku ulogu</li>
-									  <li class="list-group-item">Nagrada za najbolji scenario</li>
-									  <li class="list-group-item">Nagrada za najbolji debi </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada „Beogradski pobednik“ za najbolji film - dodeljuje se producentu </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada žirija </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolju režiju</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolju žensku ulogu</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolju mušku ulogu</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolji scenario</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolji debi </li>
 									</ul>
 							      </div>
 
 							      <div class="tab-pane fade" id="list-3" role="tabpanel" aria-labelledby="list-3-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">Nagrada za najbolji film - reditelju</li>
-									  <li class="list-group-item">Specijalno priznanje za najbolji igrani film iz ovog programa </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada za najbolji film - reditelju</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Specijalno priznanje za najbolji igrani film iz ovog programa </li>
 									</ul>
 								  </div>
 
 							      <div class="tab-pane fade" id="list-4" role="tabpanel" aria-labelledby="list-4-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">Nagrada zirija filmskih kriticara „Nebojsa Đukelić“</li>
-									  <li class="list-group-item">Fond „Nebojša Đukelić“ dodeljuje nagradu za najbolji film regiona: NAGRADE ŽIRIJA „FEDEORA“ </li>
-									  <li class="list-group-item">Diplomu i statuu ''Most wanted GORKI LIST movie award'', FESTOVE NAGRADE</li>
-									  <li class="list-group-item">Priznanja za izizetan doprinos filmskoj umetnosti kao i za dosadasnje stvaralastvo</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nagrada zirija filmskih kriticara „Nebojsa Đukelić“</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Fond „Nebojša Đukelić“ dodeljuje nagradu za najbolji film regiona: NAGRADE ŽIRIJA „FEDEORA“ </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Diplomu i statuu ''Most wanted GORKI LIST movie award'', FESTOVE NAGRADE</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Priznanja za izizetan doprinos filmskoj umetnosti kao i za dosadasnje stvaralastvo</li>
 									</ul>
 							      </div>
 
