--- a/html/1.2 nagrade_eng.html
+++ b/html/1.2 nagrade_eng.html
@@ -93,10 +93,10 @@
 							<div class="row">
 							  <div class="col-4">
 							    <div class="list-group" id="list-tab" role="tablist">
-							      <a class="list-group-item list-group-item-action active" id="list-1-list" data-toggle="list" href="#list-1" role="tab" aria-controls="1">International Competition Program</a>
-							      <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2">National Competition Program</a>
-							      <a class="list-group-item list-group-item-action" id="list-3-list" data-toggle="list" href="#list-3" role="tab" aria-controls="3">Subversive, controversial and artistic films</a>
-							      <a class="list-group-item list-group-item-action" id="list-4-list" data-toggle="list" href="#list-4" role="tab" aria-controls="4">Politika Awards</a>
+							      <a class="list-group-item list-group-item-action active" id="list-1-list" data-toggle="list" href="#list-1" role="tab" aria-controls="1" style="font-size:calc(9px + 0.4vw);">International Competition Program</a>
+							      <a class="list-group-item list-group-item-action" id="list-2-list" data-toggle="list" href="#list-2" role="tab" aria-controls="2" style="font-size:calc(9px + 0.4vw);">National Competition Program</a>
+							      <a class="list-group-item list-group-item-action" id="list-3-list" data-toggle="list" href="#list-3" role="tab" aria-controls="3" style="font-size:calc(9px + 0.4vw);">Subversive, controversial and artistic films</a>
+							      <a class="list-group-item list-group-item-action" id="list-4-list" data-toggle="list" href="#list-4" role="tab" aria-controls="4" style="font-size:calc(9px + 0.4vw);">Politika Awards</a>
 							    </div>
 							  </div>
 							  <div class="col-8">
@@ -104,41 +104,41 @@
 							    <div class="tab-content" id="nav-tabContent">
 							      <div class="tab-pane fade show active" id="list-1" role="tabpanel" aria-labelledby="list-1-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">The "Belgrade Winner" award for the best film is awarded to the producer </li>
-									  <li class="list-group-item">Special Jury Award </li>
-									  <li class="list-group-item">Award for best direction</li>
-									  <li class="list-group-item">Award for the best female role</li>
-									  <li class="list-group-item">Award for the best male role</li>
-									  <li class="list-group-item">Award for the best scenario</li>
-									  <li class="list-group-item">Award for the best debut </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">The "Belgrade Winner" award for the best film is awarded to the producer </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Special Jury Award </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for best direction</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best female role</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best male role</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best scenario</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best debut </li>
 									</ul>
 							      </div>
 
 							      <div class="tab-pane fade" id="list-2" role="tabpanel" aria-labelledby="list-2-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">The "Belgrade Winner" award for the best film is awarded to the producer </li>
-									  <li class="list-group-item">Jury Award </li>
-									  <li class="list-group-item">Award for best direction</li>
-									  <li class="list-group-item">Award for the best female role</li>
-									  <li class="list-group-item">Award for the best male role</li>
-									  <li class="list-group-item">Award for the best scenario</li>
-									  <li class="list-group-item">Award for the best debut  </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">The "Belgrade Winner" award for the best film is awarded to the producer </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Jury Award </li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for best direction</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best female role</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best male role</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best scenario</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Award for the best debut  </li>
 									</ul>
 							      </div>
 
 							      <div class="tab-pane fade" id="list-3" role="tabpanel" aria-labelledby="list-3-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">Best Film Award - Director</li>
-									  <li class="list-group-item">Special recognition for the best feature film from this program</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Best Film Award - Director</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Special recognition for the best feature film from this program</li>
 									</ul>
 								  </div>
 
 							      <div class="tab-pane fade" id="list-4" role="tabpanel" aria-labelledby="list-4-list">
 							      	<ul class="list-group">
-									  <li class="list-group-item">Jury Award for Film Critics "Nebojsa Djukelić"</li>
-									  <li class="list-group-item">Nebojsa Djukelic Foundation awards award for best film of region: AWARDS OF JURY "FEDEORA"</li>
-									  <li class="list-group-item">Diploma and Statue "Most wanted GORKI LIST movie award", FESTIVES AWARDS</li>
-									  <li class="list-group-item">Acknowledgment for the outstanding contribution to film art as well as for previous creative work</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Jury Award for Film Critics "Nebojsa Djukelić"</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Nebojsa Djukelic Foundation awards award for best film of region: AWARDS OF JURY "FEDEORA"</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Diploma and Statue "Most wanted GORKI LIST movie award", FESTIVES AWARDS</li>
+									  <li class="list-group-item" style="font-size:calc(9px + 0.4vw);">Acknowledgment for the outstanding contribution to film art as well as for previous creative work</li>
 									</ul>
 							      </div>
 
