--- a/html/2.3 prodajna_mesta.html
+++ b/html/2.3 prodajna_mesta.html
@@ -94,8 +94,8 @@
 						
 					</ul>
 				</div>
-				<div class="col-sm-8">					
-					<div id="map" style="width:100%;height:100%;"></div>
+				<div class="col-md-8">					
+					<div id="map"style="width:100%;height:700px;"></div>
 					<script>
 						
 						function initMap() {
