--- a/html/5 mojifilmovi_eng.html
+++ b/html/5 mojifilmovi_eng.html
@@ -69,7 +69,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program_eng.html">Program</a>
 							<div class="dropdown-menu" aria-labelledby="program-dd">
-								 <a class="dropdown-item selected" href="2.1 filmovi_eng.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">&nbsp; Movies</a>
+								 <a class="dropdown-item" href="2.1 filmovi_eng.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">&nbsp; Movies</a>
 								 <a class="dropdown-item" href="2.2 mesta_projekcija_eng.html">	<img src="../images/dropdown-icons/place-icon.png" width="25px">&nbsp; Theaters</a>
 								 <a class="dropdown-item" href="2.3 prodajna_mesta_eng.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">&nbsp; Ticketing</a>
 							</div>
