Omiljeni brisanje plus neke nijanse

--- a/html/5 mojifilmovi.html
+++ b/html/5 mojifilmovi.html
@@ -110,7 +110,7 @@
 					<br>
 					<br>
 					<hr>
-					<input type="button" class="btn btn-danger btn-sm" value="Obrisi sve" onClick="clearLocalStorage()">
+					<input type="button" class="btn btn-danger btn-sm" value="Obrisi sve" onClick="obrisiOmiljene()">
 					<br><br>
 				</div>
 			</div>
