sort omiljeni kada nema filmova ispravljeno

--- a/html/5 mojifilmovi_eng.html
+++ b/html/5 mojifilmovi_eng.html
@@ -110,7 +110,7 @@
 					<br>
 					<br>
 					<hr>
-					<input type="button" class="btn btn-danger btn-sm" value="Delete all" onClick="obrisiOmiljene()">
+					<input type="button" class="btn btn-danger btn-sm" value="Delete all" onClick="clearLocalStorage()">
 					<br><br>
 				</div>
 			</div>
